Test pour hike(early)
