# backend/controllers/hikeController.go
@@ -3,28 +3,31 @@ package controllers
 import (
 	"backend/db"
 	"backend/models"
-	"github.com/gin-gonic/gin"
 	"net/http"
+	"strconv"
+
+	"github.com/gin-gonic/gin"
 )
 
 // CreateHike godoc
 // @Summary Create a new hike
-// @Description Create a new hike
+// @Description Create a new hike with the input payload
 // @Tags hikes
 // @Accept json
 // @Produce json
-// @Param hike body models.Hike true "Create hike"
+// @Param hike body models.Hike true "Hike Info"
 // @Success 200 {object} models.Hike
 // @Failure 400 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
 // @Router /hikes [post]
 func CreateHike(c *gin.Context) {
 	var hike models.Hike
 	if err := c.ShouldBindJSON(&hike); err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Invalid request"})
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	if err := db.DB.Create(&hike).Error; err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Failed to create hike"})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, hike)
@@ -32,85 +35,87 @@ func CreateHike(c *gin.Context) {
 
 // GetAllHikes godoc
 // @Summary Get all hikes
-// @Description Get all hikes
+// @Description Get details of all hikes
 // @Tags hikes
 // @Accept json
 // @Produce json
 // @Success 200 {array} models.Hike
+// @Failure 500 {object} models.ErrorResponse
 // @Router /hikes [get]
 func GetAllHikes(c *gin.Context) {
 	var hikes []models.Hike
 	if err := db.DB.Find(&hikes).Error; err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Failed to get hikes"})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, hikes)
 }
 
 // GetHike godoc
-// @Summary Get a single hike
-// @Description Get a single hike by ID
+// @Summary Get a hike by ID
+// @Description Get details of a hike by its ID
 // @Tags hikes
 // @Accept json
 // @Produce json
 // @Param id path int true "Hike ID"
 // @Success 200 {object} models.Hike
-// @Failure 400 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
 // @Router /hikes/{id} [get]
 func GetHike(c *gin.Context) {
-	id := c.Param("id")
+	id, _ := strconv.Atoi(c.Param("id"))
 	var hike models.Hike
 	if err := db.DB.First(&hike, id).Error; err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Hike not found"})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, hike)
 }
 
 // UpdateHike godoc
-// @Summary Update an hike
-// @Description Update an hike by ID
+// @Summary Update a hike by ID
+// @Description Update details of a hike by its ID
 // @Tags hikes
 // @Accept json
 // @Produce json
 // @Param id path int true "Hike ID"
-// @Param hike body models.Hike true "Update hike"
+// @Param hike body models.Hike true "Hike Info"
 // @Success 200 {object} models.Hike
 // @Failure 400 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
 // @Router /hikes/{id} [put]
 func UpdateHike(c *gin.Context) {
-	id := c.Param("id")
+	id, _ := strconv.Atoi(c.Param("id"))
 	var hike models.Hike
 	if err := db.DB.First(&hike, id).Error; err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Hike not found"})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	if err := c.ShouldBindJSON(&hike); err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Invalid request"})
+		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	if err := db.DB.Save(&hike).Error; err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Failed to update hike"})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
 	c.JSON(http.StatusOK, hike)
 }
 
 // DeleteHike godoc
-// @Summary Delete an hike
-// @Description Delete an hike by ID
+// @Summary Delete a hike by ID
+// @Description Delete a hike by its ID
 // @Tags hikes
 // @Accept json
 // @Produce json
 // @Param id path int true "Hike ID"
 // @Success 200 {object} models.SuccessResponse
-// @Failure 400 {object} models.ErrorResponse
+// @Failure 500 {object} models.ErrorResponse
 // @Router /hikes/{id} [delete]
 func DeleteHike(c *gin.Context) {
-	id := c.Param("id")
+	id, _ := strconv.Atoi(c.Param("id"))
 	if err := db.DB.Delete(&models.Hike{}, id).Error; err != nil {
-		c.JSON(http.StatusBadRequest, models.ErrorResponse{Error: "Failed to delete hike"})
+		c.JSON(http.StatusInternalServerError, models.ErrorResponse{Error: err.Error()})
 		return
 	}
-	c.JSON(http.StatusOK, models.SuccessResponse{Message: "Hike deleted successfully"})
+	c.JSON(http.StatusOK, models.SuccessResponse{Message: "Hike deleted"})
 }
